2025-10-02  Karl Berry  <karl@freefriends.org>

	* bibtex.web: version 0.99e, with fixes for weave (only).
	- No more active `E (reported by Andreas Scherer and Norman Gray).
	- Use \TeX in \BibTeX and \LaTeX definitions.
	- Sort names of the sections better (from Andreas).
	- Remove unused \titlepage macro.
	- Assorted typos.
	* bibtex.ch,
	* uptexdir/upbibtex.ch: adapt.

2025-09-30  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (tex invocation): try to clarify
	command-line/first-line processing, including input filename
	expansion. Original report from Duncan Murdoch,
	https://tug.org/pipermail/tex-live/2025-August/051650.html.
	Also, use @code{TRIP} since that's that Knuth does (noticed by Max
	Chernoff).
	(\input filename caveats): mention that Windows reserves CON[.tex],
	etc. From Max.
	
	(Formats) <amstex>: no longer AMS's preferred system.
	<slitex>: mention ltx-talk.
	Other updates in passing.

2025-08-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ac/web2c.ac (ptex), Makefile.am, uptexdir/am/uptex.am,
	euptexdir/am/euptex.am, ptexdir/*, texmfmem.h, texmfmp-help.h:
	Remove ptex and ptexdir/.

2025-07-27  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.12.2 release.

2025-07-21  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (mpost invocation): update option list.

2025-07-19  David Fuchs  <drfuchs@yahoo.com>

	* dvitype.web (scan_bop [99]): verbosely output fnt_def commands
	that occur after the preamble and before the first bop, or between
	eop/bop pairs. This replaces the change of 2022-02-24, which fixed
	the original problem (lack of newline between such fnt_def cmds),
	but output them tersely.
	https://tug.org/texmfbug/newbug.html#% https://tug.org/texmfbug/newbug.html#dvitypefontoutput

2025-07-19  David Fuchs  <drfuchs@yahoo.com>

	* dvitype.web (skip_pages [95]): initialize w,x,y,z to protect
	against use in first_par, which skip_pages can call.
	https://tug.org/texmfbug/newbug.html#dvitypeinitglobal
